--- a/index.html
+++ b/index.html
@@ -5,19 +5,23 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <!-- title, description, color -->
     <title><%- title %></title>
     <meta name="description" content="<%- description %>" />
-    <meta name="theme-color" content="#a61c00f0" />
+    <meta name="theme-color" content="<%- theme %>" />
     <!-- icons -->
-    <link rel="icon" href="./favicon.ico" />
-    <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Klee+One:wght@600&family=Potta+One&family=Zen+Maru+Gothic&display=swap"
-      rel="stylesheet"
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon-152x152.png" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="<%- theme %>" />
+    <meta
+      name="msapplication-TileImage"
+      content="/msapplication-icon-144x144.png"
     />
+    <meta name="msapplication-TileColor" content="#ffffff" />
     <!-- OGP -->
     <meta property="og:title" content="<%- title %>" />
     <meta property="og:description" content="<%- description %>" />
@@ -27,7 +31,13 @@
     <meta property="og:site_name" content="<%- ogSiteName %>" />
     <meta name="twitter:card" content="<%- ogTwitterCard %>" />
     <!-- Loading -->
-    <link rel="stylesheet" href="./loading.css" />
+    <link rel="stylesheet" href="/loading.css" />
+    <!-- error for amplify -->
+    <script>
+      var global = global || window;
+      var Buffer = Buffer || [];
+      var process = process || { env: { DEBUG: undefined }, version: [] };
+    </script>
   </head>
   <body>
     <!-- Loading -->
